--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-lg bg-transparent navbar-light">
+        <nav class="navbar navbar-expand-lg bg-transparent navbar-dark">
             <div class="container-fluid m-2">
                 <img src="./image/logo.png" class="px-lg-3" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -104,8 +104,8 @@
                                         with flexible, convefnient and chient anipurpose layouts. You can select your
                                         favorite layouts.</small>
                                 </p>
-                                <div class="d-grid gap-2 col-6  mx-auto">
-                                    <button class="btn btn-dark" type="button"><b>BECAME A
+                                <div class="d-grid gap-2 col-6 mx-auto">
+                                    <button class="btn btn-dark mb-4" type="button"><b>BECAME A
                                             MEMBER</b></button>
 
                                     <div class="icon mt-lg-5">
@@ -215,7 +215,7 @@
                     today to know more about the facilities we offer.</p>
 
                 <div class="slider">
-                    <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                    <div id="carouselExampleFade" class=" mt-lg-5 slide carousel-fade">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="./image/fit-individual-doing-sport.jpg" class="d-block w-100" alt="...">
